--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "laibay-atm-machine",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
